desktop browser display

--- a/Web/index.html
+++ b/Web/index.html
@@ -10,7 +10,7 @@
 <body>
   <script>
     // Setup all of the class vars 
-    var PRODUCTION = true;
+    var PRODUCTION = false;
     var editMode = false;
     var SPRITE_WIDTH = window.innerWidth/3;
     var SPRITE_HEIGHT = SPRITE_WIDTH;
